# DisCo

./: .gitignore  README.md  demo.py  launch.py  pyproject.toml  train.py
data/: generate_split_for_arkit.py
datasets_preprocess/: extract_vit_features.py  unzip_all_data.py
disco/configs/: finetune_triplane_diffusion.yaml  train_triplane_diffusion.yaml
disco/datasets/: MultiView_dataset.py  SingleView_dataset.py  __init__.py  taxonomy.py
disco/engine/: engine_triplane_dm.py  engine_triplane_vae.py
disco/models/: TriplaneVAE.py  Triplane_Diffusion.py
disco/models/modules/: image_sampler.py
disco/scripts/: cache_img_vit_features.py  cache_triplane_vae_features.py  evaluate_reconstruction.py  evaluate_triplane_vae_and_diffusion.py  train_triplane_diffusion.py  train_triplane_vae.py
disco/utils/: misc.py
disco/utils/pyTorchChamferDistance/chamfer_distance/: chamfer_distance.py
