[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disco"
version = "0.1.0"
description = "DisCo:Diffusion-based Cross-modal Shape Reconstruction"
license = {file = "LICENSE"}

dependencies=[
]

[tool.setuptools.packages.find]
include = ["disco*"]
